fixing backface visibility

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+  backface-visibility: hidden;
 }
 .heading-primary-main {
   display: block;
@@ -69,6 +70,7 @@ body {
   font-size: 20px;
   letter-spacing: 17.4px;
   font-weight: 700;
+  animation: moveInRight 1s ease-out;
 }
 @keyframes moveInLeft {
   0% {
@@ -84,15 +86,15 @@ body {
   }
 }
 @keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(100px);
-    }
-    80% {
-        transform: translateX(-10px);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  80% {
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
